Switch from Santuario Base64 to java.util.Base64 implementation
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>